src/pages/Work/work.css
.cards-container {
  display: flex;
  flex-direction: column;
  margin-left: 100px;
  width: 50%;
  margin-top: 60px;
}

.card-container {
  position: sticky;
  top: 280px;
}

.work-title {
  position: fixed;
  margin-top: 180px;
  margin-left: 100px;
}

.project-images-container {
  width: 50%;
}

.projects {
  display: flex;
  margin-top: 220px;
}

.project-image {
  margin-left: 10px;
  max-width: 90%;
  height: 90vh;
  position: fixed;
  border-radius: var(--border-radius);
}

.project-image img {
  /* animation: imageFadeIn 1s ease forwards; */
  object-fit: cover;
  width: 45%;
  height: 75%;
  right: 0;
  bottom: 0;
  border-radius: var(--border-radius);
}

@keyframes imageFadeIn {
  0% {
    opacity: 0;
    transform: none;
  }
  100% {
    opacity: 1;
    transform: scale(1.1) translateZ(0px);
  }
}

